# syntax-searcher

./: .clippy.toml  Cargo.toml  README.md  config.json
benches/: benches.rs
src/: argparse.rs  collection.rs  compiler.rs  lib.rs  main.rs  multipeek_putbackn.rs  options.rs  parser.rs  psi.rs  query.rs  render_machine.rs  run.rs  tokenizer.rs  wrappers.rs
test-files/: hello.clj  injection.clj  injection.php  main.c  main.py  symlink  symlink-dir
test-files/corner-cases/: words
test-files/hello/: c.c  clojure.clj  csharp.cs  elixir.ex  python.py  sql.sql  vb.vb
test-files/symlink-target/: file
tests/: cli.rs  fixtures.rs
tests/.fixtures/color/: c.c  clojure.clj  elixir.ex  haskell.hs  java.java  javascript.js  php.php  plain.txt  vb.vb
tests/.fixtures/nocolor/: c.c  elixir.ex  haskell.hs  javascript.js  php.php  rust.rs  vb.vb
tests/fixtures/color/: csharp.cs  python.py  rust.rs  sql.sql
tests/fixtures/nocolor/: clojure.clj  csharp.cs  java.java  plain.txt  python.py  sql.sql
