[package]
name = "syns"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
ignore = "0.4"
lazy_static = "1.4"
log = "0.4"
ouroboros = "0.9" 
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
