[package]
name = "syns"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
ignore = "0.4"
itertools = "0.14.0"
lazy_static = "1.4"
log = "0.4"
ouroboros = "0.18"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.8"
test-generator = "0.3.1"

[[bench]]
name = "benches"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
iter_over_hash_type = "warn"
